--- a/src/app/charts/area-chart/area-chart.component.html
+++ b/src/app/charts/area-chart/area-chart.component.html
@@ -5,8 +5,8 @@
   [legend]="showLegend"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
-  [xAxis]="xAxis"
-  [yAxis]="yAxis"
+  [xAxis]="showXAxis"
+  [yAxis]="showYAxis"
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [timeline]="timeline"
