--- a/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
+++ b/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
@@ -4,8 +4,8 @@
   [results]="dataSource"
   [animations]="animations"
   [gradient]="gradient"
-  [xAxis]="xAxis"
-  [yAxis]="yAxis"
+  [xAxis]="showXAxis"
+  [yAxis]="showYAxis"
   [legend]="showLegend"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
