Resolved issue related to loading screen

--- a/src/app/cd-dashboard/cd-dashboard.component.html
+++ b/src/app/cd-dashboard/cd-dashboard.component.html
@@ -61,7 +61,7 @@
 
         <!-- #################### widget charts codes start ############################ -->
 
-        <div class="col-sm-4 px-1 mb-2" *ngFor="let widget of widgetRawData;let widgetindex=index">
+        <div class="col-sm-4 px-1 mb-2 cdDashboard" *ngFor="let widget of widgetRawData;let widgetindex=index">
           <div class="card border-0">
             <div class="card-body">
               <div class="graph-header d-flex align-items-center justify-content-between">
@@ -135,7 +135,7 @@
 
         <!-- #################### Add widget charts codes start ############################ -->
 
-        <div class="col-sm-4 px-1 mb-2">
+        <div class="col-sm-4 px-1 mb-2 cdDashboard">
           <div class="card border-0">
             <div class="card-body">
               <div class="graph-header d-flex align-items-center justify-content-between">
@@ -172,7 +172,7 @@
         </div>
       </div>
 
-      <!-- #################### Add widget charts codes start ############################ -->
+      <!-- #################### Add widget charts codes end ############################ -->
 
     </div>
   </div>
