--- a/src/app/cd-dashboard/cd-dashboard.component.less
+++ b/src/app/cd-dashboard/cd-dashboard.component.less
@@ -1,16 +1,18 @@
-.dots-container {
-    padding: 106px 0px !important;
-}
-.graph-blank {
-    margin: 94px 0px !important;
-}
-.type-not-exist{
-    i{
-        font-size: xx-large;
-        color: lightgrey;
+.cdDashboard{
+    .dots-container {
+        padding: 106px 0px;
     }
-    text-align: center;
-    font-size: 15px;
-    margin: 103px 0px;
-    color: #999;
+    .graph-blank {
+        margin: 94px 0px !important;
+    }
+    .type-not-exist{
+        i{
+            font-size: xx-large;
+            color: lightgrey;
+        }
+        text-align: center;
+        font-size: 15px;
+        margin: 103px 0px;
+        color: #999;
+    }
 }
