--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -130,3 +130,32 @@
     font-weight: 700;
   }
 }
+.pagination{
+	li{
+		cursor: pointer;
+	}
+}
+tbody{
+	a{
+		cursor: pointer;
+	}
+}
+.refreshList{
+	padding: 9px 10px 5px 12px;;
+    font-size: large;
+    cursor: pointer;
+    color: #0ea4fb;
+}
+.ngx-charts-outer {
+  display: table;
+  .ngx-charts {
+      float: left !important;
+      position: relative !important;
+      display: table-footer-group;
+  }
+  
+  .chart-legend {
+      width: 100% !important;
+      display: table-header-group;
+  }
+}
