OP-2861: Initial commit related to populate wedget

--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
@@ -183,7 +183,7 @@
 
               <p class="mb-1">QUARTILE COMPARISON : CONTAINER_MEMORY_FAILURES_TOTAL</p>
               <div class="graph mb-4">
-                <img src="./../../../assets/images/matric_graph02.jpg" class="img-fluid" alt="image" />
+                <img src="../../../../assets/images/matric_graph02.jpg" class="img-fluid" alt="image" />
               </div>
               <!-- /.graph mb-3 -->
 
